<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyProject</string>
    <string name="heybro">HeyBro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--AUTH-->
    <string name="login">Connectez-vous</string>
    <string name="logout">logout</string>
    <string name="register">Nouveau compte</string>
    <string name="welcome">Welcome</string>
    <string name="password">password</string>
    <string name="user_registreted">Utilisateur créé</string>
    <string name="password_to_short">minimum 6 caractères pour le mot de passe</string>
    <string name="wrong_credential">mauvais email ou mot de passe</string>
    <string name="edit_profile">Editer profile</string>
    <string name="submit">Submit</string>
    <string name="invalid_email">email invalide</string>
    <string name="user_avatar">user_avatar</string>
    <string name="pwd_and_confirm_not_equals">mot de passe et confirmation sont différents</string>
    <string name="user_updated">utilisateur édité</string>
    <string name="username_or_email_already_exist">nom d\'utilisateur ou email déjà utilisé</string>


    <!-- ERROR-->

    <string name="server_error">erreur du serveur</string>
    <string name="token_expired">token expiré</string>
    <string name="unauthorized">probléme d\'autorisation</string>
    <string name="error_parameter">probléme de paramétres</string>
    <string name="unprocessable_entity">non traitable</string>
    <string name="empty_fields">tous les champs doivent être remplis</string>
    <string name="obligatory_fields">remplir les champs obligatoires</string>
    <string name="no_connection">pas de connection</string>
    <string name="unknow_resource">resource introuvable</string>
    <string name="non_obligatory">non obligatoire</string>

    <!--  ACTIVITIES EVENT-->
    <string name="nouvel_v_nement">nouvel événement</string>
    <string name="new_event">new</string>
    <string name="activity_event_create">événement ajouter</string>
    <string name="activity_event_updated">événement modifier</string>
    <string name="details">details</string>
    <string name="rejoindre">Rejoindre</string>
    <string name="heure_de_la_rencontre">heure de la rencontre</string>
    <string name="nombre_de_personnes_1d">%1$d personne(s)</string>
    <string name="calendar">calendar</string>
    <string name="choisir_une_date">choisir une date</string>
    <string name="clock">clock</string>
    <string name="choisir_l_heure_de_rencontre">choisir l\'heure de rencontre</string>
    <string name="description">Description</string>
    <string name="donnez_votre_description">donnez votre description</string>
    <string name="image_url">image_url</string>
    <string name="contenu">description</string>
    <string name="titre_label">titre</string>
    <string name="localisation">localisation</string>
    <string name="nombre_de_personnes">nombre de personnes</string>
    <string name="point_de_rencontre">point de rencontre</string>
    <string name="date">date</string>
    <string name="user_image_preview">user image preview</string>
    <string name="booking_request_success">Demande ajouté</string>
    <string name="delete_request_success">supprimer avec succés</string>
    <string name="confirm_delete">Voulez-vous supprimer cette événement</string>

    <!-- PROFILE-->

    <string name="profile">profile</string>
    <string name="nom_d_utilisateur">nom d\'utilisateur</string>
    <string name="email">email</string>
    <string name="url_de_votre_image">url de votre image</string>
    <string name="votre_ville">votre ville</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="confirmer_mot_de_passe">confirmer mot de passe</string>
    <string name="nouveau_compte">Nouveau compte</string>
    <string name="entrez_votre_email">entrez votre email</string>
    <string name="entrez_votre_mot_de_passe">entrez votre mot de passe</string>
    <string name="pas_de_compte_enregistrez_vous_ici">pas de compte ? enregistrez-vous ici !</string>


    <!-- BOOKING-->
    <string name="comfirm_booking">Voulez-vous réserver pour cette événement ?</string>
    <string name="comfirm_cancel">Voulez-vous annuler pour cette événement ?</string>
    <string name="cancel_success">annuler avec succés</string>


    <!-- DIVERS-->
    <string name="ok">ok</string>
    <string name="no">annuler</string>
    <string name="notification">notification</string>
    <string name="history">history</string>
    <string name="enregister">enregister</string>
    <string name="supprimer">supprimer</string>
    <string name="mettre_jour">mettre à jour</string>
    <string name="pencil">pencil</string>
    <string name="envoyer">Envoyer</string>
    <string name="participation_s">participation(s)</string>
    <string name="cr_ation_s">création(s)</string>
    <string name="icon_participation">icon_participation</string>
    <string name="icon_creation">icon_creation</string>
    <string name="who_am_i">Qui suis-je ?</string>
    <string name="icon_location">icon_location</string>
    <string name="icon_date">icon_date</string>
    <string name="icon_people">icon_people</string>
    <string name="pas_d_v_nement_pour_cette_categorie">Pas d\'événement pour cette categorie</string>
    <string name="historique">historique</string>
    <string name="editer">Editer</string>
    <string name="annuler">Annuler</string>
    <string name="ev_nement_complet">complet</string>
    <string name="participants">participants :</string>
    <string name="confirmer">confirmer</string>
    <string name="en_attente">en attente</string>
    <string name="valider">valider</string>
    <string name="reject">refuser</string>
    <string name="validation">validation</string>
    <string name="icon_validation">icon_validation</string>


</resources>