<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.myproject.ui.new_edit_activities_form.NewEditFormViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.new_edit_activities_form.NewEditFormFragment">

        <TextView
            android:id="@+id/tv_new_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nouvel_v_nement"
            android:textColor="@color/my_dark_blue"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="75dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_edit"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/et_title_article"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="titre"
                android:ems="10"
                android:hint="@string/titre_label"
                android:inputType="textPersonName"
                android:text="@={viewModel.titleLd}"
                android:textColorHighlight="@color/my_dark_blue"
                android:textColorHint="@color/my_dark_blue" />


            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:autofillHints="Contenu"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/contenu"
                android:inputType="textMultiLine"
                android:lines="6"
                android:text="@={viewModel.descriptionLd}"
                android:textColorHint="@color/my_dark_blue" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints="location"
                android:ems="10"
                android:hint="@string/localisation"
                android:inputType="textPersonName"
                android:text="@={viewModel.locationLd}"
                android:textColorHint="@color/my_dark_blue" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_calendar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/calendar"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />

                <EditText
                    android:id="@+id/et_selected_date"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:autofillHints="meeting_point"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/choisir_une_date"
                    android:inputType="text|date"
                    android:text="@={viewModel.startAtLd}"
                    android:textColorHint="@color/my_dark_blue" />

            </LinearLayout>


            <EditText
                android:id="@+id/et_meeting_point"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints="meeting_point"
                android:ems="10"
                android:hint="@string/point_de_rencontre"
                android:inputType="textPersonName"
                android:text="@={viewModel.meetingPointLd}"
                android:textColorHint="@color/my_dark_blue" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_clock"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/clock"
                    app:srcCompat="@android:drawable/ic_menu_recent_history" />

                <EditText
                    android:id="@+id/et_meeting_time"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:autofillHints="meeting_time"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/choisir_l_heure_de_rencontre"
                    android:inputType="text|date"
                    android:text="@={viewModel.meetingTimeLd}"
                    android:textColorHint="@color/my_dark_blue" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_max_people"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints="max_people"
                android:ems="10"
                android:hint="@string/nombre_de_personnes"
                android:inputType="number"
                android:text="@={viewModel.maxOfPeopleLd}"
                android:textColorHint="@color/my_dark_blue" />


            <Spinner
                android:id="@+id/spinner_category_form"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/my_dark_blue"
                android:selectedItemPosition="@={viewModel.positionSelectedLd}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <Button
                android:id="@+id/btn_save_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:onClick="@{() -> viewModel.createActivityEvent()}"
                android:text="@string/enregister" />

            <Button
                android:id="@+id/btn_edit_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:onClick="@{() -> viewModel.updateActivityEvent()}"
                android:text="@string/mettre_jour"
                android:visibility="gone"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>