<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.myproject.ui.login.LoginViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ui.login.LoginFragment"
        android:background="@drawable/bg_gradient">


        <TextView
            android:id="@+id/tv_title_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textColor="@color/my_dark_blue"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <LinearLayout
            android:id="@+id/linear_layout_login_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="34dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_login_activity">



            <EditText
                android:id="@+id/et_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/entrez_votre_email"
                android:text='@={viewModel.emailLiveData}'
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/et_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/entrez_votre_mot_de_passe"
                android:text='@={viewModel.passwordLiveData}'
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_submit_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/envoyer" />

            <TextView
                android:id="@+id/tv_register_login_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pas_de_compte_enregistrez_vous_ici"
                android:textAlignment="center"
                android:textColor="@color/my_dark_blue" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>