<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details_activity_event.DetailsActivityFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/my_yellow"
                android:padding="20dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_user_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    tools:src="@drawable/avatar" />


                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="32dp"
                    android:layout_toEndOf="@+id/civ_user_image"
                    android:includeFontPadding="false"
                    android:textColor="@color/my_dark_blue"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:text="username" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                >

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="20dp"
                    tools:text="Category"
                    android:textStyle="bold"
                    android:textColor="@color/my_dark_blue"/>


                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:textColor="@color/my_green"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Title" />


                <ImageView
                    android:id="@+id/location_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/tv_title"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/icon_location"
                    android:src="@drawable/location" />


                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/my_dark_blue"
                    tools:text="Location" />


                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="20dp"
                    android:textColor="@color/my_dark_blue"
                    tools:text="Date" />

                <ImageView
                    android:id="@+id/icon_people"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/tv_location"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/icon_people"
                    android:src="@drawable/group" />


                <TextView
                    android:id="@+id/tv_max_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_location"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/nombre_de_personnes_1d"
                    android:textColor="@color/my_dark_blue"
                    tools:text="Number of People" />


                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_max_people"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    tools:text="Description" />


              <Button
                    android:id="@+id/btn_join"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_description"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="200dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/rejoindre" />

                <LinearLayout
                    android:id="@+id/btn_group_update_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:layout_below="@+id/tv_description"
                    android:layout_marginBottom="30dp"
                    android:paddingHorizontal="60dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/btn_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editer" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1" />

                    <Button
                        android:id="@+id/btn_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/supprimer" />


                </LinearLayout>






            </RelativeLayout>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

